--- a/personal/1091038/README
+++ b/personal/1091038/README
@@ -1,1 +1,17 @@
-진햄
+1091038 진혜미
+
+
+증강현실을 이용한 가구배치 어플.
+-마커를 인식해서 집구조를 띄우고 벽지나 가구등을 미리 배치해 봄.
+
+
+-사용자에게 주는 가치
+1. 실제로 이사할 때 시간을 줄일 수 있다.
+2. 노동력을 줄 일 수 있다.
+3. 직접 가보지 않아도 IT기계로 마치 집에 있는 것 같은 느낌을 받을 수 있다.
+
+
+-사용해야 하는 기술 
+1. 3dsmax를 이용한 3차원 modeling
+2. unuty를 이용하여 마커를 인식하는 기능
+3. 포토샵을 이용한 이미지 편집.
