--- a/team/DoDive/README
+++ b/team/DoDive/README
@@ -19,7 +19,8 @@
 
 ○ 만들 소프트웨어의 주요 기능 3가지
 
-- 이동통신망 혹은 GPS(위치기반서비스)를 사용하여 위치 파악 및 기록 한다.(위치기반서비스를 이용하여 대략적인 위치를 파악하고, 사용자가 정확한 위치를 표시 할 수 있도록 한다.)
+- 이동통신망 혹은 GPS(위치기반서비스)를 사용하여 위치 파악 및 기록 한다.
+(위치기반서비스를 이용하여 대략적인 위치를 파악하고, 사용자가 정확한 위치를 표시 할 수 있도록 한다.)
 
 - dropbox , 구글드라이브 등의 클라우드 서비스를 이용하여 사진 및 짧은 글을 저장 한다.
 (표시된 위치에 클라우드 서비스로 저장된 사진 및 글이 링크와 섬네일으로 제공된다.)
