--- a/team/DoDive/README
+++ b/team/DoDive/README
@@ -1,6 +1,6 @@
 팀명 - ' DoDive '
 팀원 - 팀장 : 홍영수(0891047) - coolhong
-       팀원 : 정현준(0791040) - rhatnpfla
+       팀원 : 정현준(0791040) - rhatnpfld
 
 ● 프로젝트 아이디어 : 위치저장 지도 (가칭-너랑나지도)
 
