--- a/team/pts/README
+++ b/team/pts/README
@@ -1,6 +1,6 @@
 팀명 Pts
 
-팀원 김기웅(Kimkiwoong) 임현우(LewisLim579)
+팀원 김기웅(Kimkiwoong) 임현우(LewisLim579) 김남희(nevern414)
 
 아이디어 : 모바일 어플리케이션을 이용한 workout 도우미(퍼스널트레이너) 역할을 할수있는 프로그램입니다.
 실시간 식단관리 알림, gym 에서도 활용할수있는 운동자세 안내등 여러 기능으로 사용자로 하여금 퍼스널 트레이너
