--- a/team/DoDive/README
+++ b/team/DoDive/README
@@ -2,28 +2,29 @@
 팀원 - 팀장 : 홍영수(0891047) - coolhong
        팀원 : 정현준(0791040) - rhatnpfld
 
-● 프로젝트 아이디어 : 위치저장 지도 (가칭-너랑나지도)
+● 프로젝트 아이디어 : Filey Webhard
 
-- 기억하고 싶은 장소를 사진과 짧은 글로 저장, 공유
+- 클라우드 스토리지를 이용하여 보다 스마트한 생활을 누린다.
 
 
 ○ 만들 소프트웨어가 사용자에게 주는 가치 3가지
 
-- 내가 기억하고 싶은 장소(나만의 명당, 맛집등)을 지도에 기록하여 
-다시 쉽게 기억하고 찾아가는데 도움을 준다.
+- PC,스마트폰,스마트TV등 많은 디바이스에서 사용이 가능한 대용량 저장장치로 보다 스마트한 생활을 만든다.
 
-- 공개, 비공개으로 나누고, 특정 사람과 그룹으로 관리, 공유하여 함께 정보를 나눌수 있다.
+- 인터넷이 가능하다면 언제 어디서나 접속이 가능하고 간편한 동기화로 데이터를 보존한다.
 
-- 페이스북, 트위터등으로 좀 더 간단하고 정확하게 공유하여 SNS 의 파워유저로 거듭난다. 
+- 나누고 싶은 파일(동영상,프로젝트문서,개인파일 등) 다른 사람과 손쉽게 공유한다.
 
 
 ○ 만들 소프트웨어의 주요 기능 3가지
 
-- 이동통신망 혹은 GPS(위치기반서비스)를 사용하여 위치 파악 및 기록 한다.
-(위치기반서비스를 이용하여 대략적인 위치를 파악하고, 사용자가 정확한 위치를 표시 할 수 있도록 한다.)
+- 클라우드 스토리지를 모르는 이용자라도 보다 쉽게 친숙하게 이용하여 보다 스마트한 파워유저로 거듭난다.
+(홈페이지에 사용법을 따라가기 방식으로 만들어 쉽게 익숙해질 수 있도록 한다.)
 
-- dropbox , 구글드라이브 등의 클라우드 서비스를 이용하여 사진 및 짧은 글을 저장 한다.
-(표시된 위치에 클라우드 서비스로 저장된 사진 및 글이 링크와 섬네일으로 제공된다.)
+- USB메모리, 헨드폰과 컴퓨터 연결 등의 제약에서 벗어나 자유롭게 디바이스간의 자료를 이동하고 저장한다.
+(여러가지 프로그램과 어플리케이션을 통하여 손쉽게 스토리지에 접근하여 자료를 저장하고 이동하며
+ 쉽게 잊어버릴수 있는 USB메모리등을 쓰지 않고 잊어버리지 않는 클라우드 스토리지를 이용한다.)
 
-- 페이스북, 트위터 등 SNS계정을 연동하여 게시물을 작성, 저랑나지도에서 작성된 장소를 쉽게 공유 할 수 있도록 한다.
-(미리 작성한 지도를 공유하기 기능으로 SNS계정에 연동하여 게시물을 업로드 하여 쉽게 공유한다.)
+- 사용자 간의 간편한 자료공유와 제한적인 저장공간에서 벗어난다.
+(함께 공유하고 싶은 나만의 자료 혹은 팀 프로젝트의 자료 등 다른 이용자들 혹은 비이용자들과의 용량 제한 없는
+ 간편한 공유로 팀 혹은 개인에게 원활한 작업환경 및 응용범위를 넓혀준다.)
